# MarioKartDiscordBot

./: .gitignore  docker-compose.yml  loadenv.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: fd01710ba70d_create_tables_to_handle_time_trial_.py
src/: Bot.py  InMemoryTrackRepository.py  MKLeaderboards.py  MKLeaderboardsCommand.py  Random.py  RandomTracksSampler.py  RandomizeCommand.py  SampleSizeCalc.py  TrackRepository.py  app_properties.py  logging.py
src/mkleaderboards/: MKLeaderboards.py  MKLeaderboardsAPI.py
src/mkleaderboards/commands/: CoursesSubcommand.py  MKLeaderboardsCommand.py  RankingSubcommand.py
src/random/commands/: RandomizeCommand.py
src/shared/domain/: dict_utils.py  errors.py
src/shared/infrastructure/persistence/: db.py  sqlalchemy_core_repository.py
src/timetrialcomp/application/: create_timetrial_competition.py  get_current_competitions.py  submit_time.py
src/timetrialcomp/commands/: CreateTimeTrialCompetitionModal.py  TimeTrialCompetitionCommand.py
src/timetrialcomp/domain/: submitted_time.py  submitted_time_repository.py  timetrial_comp_repository.py
src/timetrialcomp/infrastructure/: sqlalchemy_submitted_time_repository.py  sqlalchemy_timetrial_comp_repository.py  tables.py
src/timetrialcomp/presenter/: create.py  find_all.py  ranking.py  submit_time.py
src/timetrialcomp/shared/: presenter.py
src/timetrialcomp/ui/: __init__.py
templates/top10/: top10.css  top10.html
tests/: test_RandomTracksSampler.py  test_create_timetrial_competition.py
(+13 files in other folders)
